Fix topic configurations.
- adjust kafka configurations
- remove UEB references

Issue-ID: POLICY-4955
