# policy-management/src/main/resources/openapi/openapi.yaml
@@ -2443,8 +2443,8 @@ paths:
     get:
       tags:
         - pdp-d-telemetry
-      summary: Retrieves the latest events received by an UEB topic
-      description: This is a Network Communicaton Endpoint source of messages for
+      summary: Retrieves the latest events received by a topic
+      description: This is a Network Communication Endpoint source of messages for
         the Engine
       operationId: sourceEvents
       parameters:
@@ -2523,7 +2523,7 @@ paths:
     get:
       tags:
         - pdp-d-telemetry
-      summary: Retrieves the latest events received by an UEB topic
+      summary: Retrieves the latest events received by a topic
       description: This is a Network Communication Endpoint source of messages for
         the Engine
       operationId: sinkEvents
@@ -2935,8 +2935,6 @@ components:
         topicCommInfrastructure:
           type: string
           enum:
-          - UEB
-          - DMAAP
           - KAFKA
           - NOOP
           - REST
@@ -3008,8 +3006,6 @@ components:
         topicCommInfrastructure:
           type: string
           enum:
-          - UEB
-          - DMAAP
           - KAFKA
           - NOOP
           - REST
@@ -3885,8 +3881,6 @@ components:
         topicCommInfrastructure:
           type: string
           enum:
-          - UEB
-          - DMAAP
           - KAFKA
           - NOOP
           - REST
